Remove usage of List.of
Since Java 9+.